--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/EthanD0922/bamazon#readme",
   "dependencies": {
+    "columnify": "^1.5.4",
     "inquirer": "^7.0.0",
     "mysql": "^2.17.1"
   }
